[package]
name = "client-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }

prost = "*"
prost-types = "*"
anyhow = "*"

serde = "*"
serde_json = "*"

futures = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
