[package]
name = "client-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "grpc",
    "macros",
] }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }

prost = "*"
prost-types = "*"
anyhow = "*"

serde = "*"
serde_json = "*"

futures = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
